--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-openpyxl==3.0.7
+DrissionPage==4.0.2
+openpyxl==3.0.10
 PyMySQL==1.0.2
-pytz==2021.1
-selenium~=4.10.0
-PyYAML~=6.0.1
-DrissionPage~=3.2.31
+pytz==2022.6
+PyYAML==6.0.1
+webdriver_manager==4.0.1
